[gd_scene load_steps=6 format=2]

[ext_resource path="res://sprites/radar_objects.png" type="Texture" id=1]
[ext_resource path="res://objects/asteroid_field/PlayerShip.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 3.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1, 4 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4, 1 )

[node name="PlayerShip" type="Area2D"]
scale = Vector2( 2, 2 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 4, 20, 8, 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area2D_Shield_Fore" type="Area2D" parent="."]

[node name="CollisionShape2D_Fore" type="CollisionShape2D" parent="Area2D_Shield_Fore"]
position = Vector2( 5, 0 )
shape = SubResource( 2 )
disabled = true

[node name="Area2D_Shield_Aft" type="Area2D" parent="."]

[node name="CollisionShape2D_Aft" type="CollisionShape2D" parent="Area2D_Shield_Aft"]
position = Vector2( -5, 0 )
shape = SubResource( 2 )
disabled = true

[node name="Area2D_Shield_Port" type="Area2D" parent="."]

[node name="CollisionShape2D_Port" type="CollisionShape2D" parent="Area2D_Shield_Port"]
position = Vector2( 0, -5 )
shape = SubResource( 3 )
disabled = true

[node name="Area2D_Shield_Starboard" type="Area2D" parent="."]

[node name="CollisionShape2D_Starboard" type="CollisionShape2D" parent="Area2D_Shield_Starboard"]
position = Vector2( 0, 5 )
shape = SubResource( 3 )
disabled = true

[node name="Timer_RandomiseDirection" type="Timer" parent="."]
wait_time = 1.25
autostart = true
[connection signal="body_entered" from="." to="." method="_on_PlayerShip_body_entered"]
[connection signal="body_entered" from="Area2D_Shield_Fore" to="." method="_on_Area2D_Shield_Fore_body_entered"]
[connection signal="body_entered" from="Area2D_Shield_Aft" to="." method="_on_Area2D_Shield_Aft_body_entered"]
[connection signal="body_entered" from="Area2D_Shield_Port" to="." method="_on_Area2D_Shield_Port_body_entered"]
[connection signal="body_entered" from="Area2D_Shield_Starboard" to="." method="_on_Area2D_Shield_Starboard_body_entered"]
[connection signal="timeout" from="Timer_RandomiseDirection" to="." method="_randomise_direction"]
